# lyricore

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/lyricore/: Cargo.toml
crates/lyricore-store/: Cargo.toml
crates/lyricore-store/benches/: main.rs
crates/lyricore-store/src/: fast_ops.rs  storage_data.rs  store.rs
crates/lyricore-store/tests/: deadlock_tests.rs  mmap_tests.rs
crates/lyricore/benches/: actor_benchmarks.rs  local_performance.rs
crates/lyricore/examples/: remote_performance.rs
crates/lyricore/proto/: actor_service.proto
crates/lyricore/src/: actor_ref.rs  actor_system.rs  error.rs  lib.rs  path.rs  runtime.rs  scheduler.rs  serialization.rs
python/: Makefile  pyproject.toml
python/lyricore-py/: Cargo.toml  pyproject.toml
python/lyricore-py/python/lyricore/: __init__.py  actor_wrapper.py  eventbus.py  proxy_ref.py  py_actor.py
python/lyricore-py/python/lyricore_py/: __init__.py  _lyricore_py.pyi  actor_wrapper.py  object_store.py  proxy_ref.py  py_actor.py  router.py
python/lyricore-py/python/lyricore_py/tests/: conftest.py
python/lyricore-py/src/: lib.rs  object_store.rs  py_actor.rs  py_actor_context.rs
python/lyricore-py/tests/: test_actor_context.py  test_actor_method_ref.py  test_actor_router.py  test_create_actor.py  test_create_ser_actor.py  test_enhanced_actor.py  test_eventbus.py  test_function_serialization.py  test_message_types.py  test_object_store_lock.py  test_object_store_opt.py  test_two_actor_remote.py
